# arrow-vlm

./: .env.example  .gitignore  AGENTS.md  AGENT_CODING.md  AGENT_protocl_v2.md  CONTEXT.md  README.md  REFACTOR_PLAN.md  environment.yml  pyproject.toml
app/: README.md  demo.py  demo_two_stage.py
bug_logs/: 2026-03-24-qwen3-vl-mm-token-type-ids-rope-deltas.md  2026-03-25-canonical-instance-ordering-and-faithful-dataset-loading.md
configs/: train.yaml  train_full_ft.yaml  train_full_ft_4b.yaml  train_full_ft_rtx6000_96g.yaml  train_lora.yaml  train_lora_4b.yaml  train_lora_rtx6000_96g.yaml  train_stage1_lora.yaml  train_stage1_lora_4b.yaml  train_stage2_lora.yaml  train_stage2_lora_4b.yaml  train_sync_posttrain.yaml
configs/infer/: infer_one_stage.yaml  infer_stage1_grounding.yaml  infer_stage2_keypoint_sequence.yaml  infer_two_stage.yaml
configs/train/: train_lora.yaml  (+10 more)
docs/: data_prepare.md  developer_task_extension.md  refactor_relaunch.md  standard_data_format.md  task_domain_routing.md  tool_scripts.md
lab_notes/: canonical-order.md  decoder-only-padding.md  findings.md  qwen3vl-runtime-state.md  stage2-batch-inference-debug.md  two-stage-refactor-plan.md
scripts/: debug_eval.py  download_qwen3_vl.sh  ground_once_qwen3vl.py  infer.py  infer_two_stage.py  prepare_data.py  prepare_stage1_data.py  prepare_stage2_data.py  prepare_two_stage_data.py  train.py  train_two_stage.py  visualize_prediction.py
synthetic_pipeline/: README.md  asset_bank.py  config.py  exporter.py  generate_sync_dataset.py  scene_sampler.py  schema.py  style_miner.py  style_schema.py
(+87 files in other folders)
